[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-compliance-agent"
version = "1.1.0"
description = "Content moderation RL environment for OpenEnv hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openenv-core",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-multipart",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
